--- a/단위기능분리.md
+++ b/단위기능분리.md
@@ -1,7 +1,25 @@
-## 단위기능 분리
+## 단위기능 분리 - 피드백 이후
 
-#### Caculator 클래스
-1. 입력한 문자열에서 커스텀 문자열을 분리
-2. 나머지 문자열에서 숫자를 분리
-3. 숫자 덧하기
-3. 정상 입력이 아닌 경우에 대한 유효성 검증
+### 단위기능
+1. 자동차는 5글자를 초과하는 이름을 가질 수 없다.
+2. 자동차는 전진할 수 있다.
+3. 자동차는 0~9 사이 값 중 랜덤한 값을 뽑아 4 이상이면 전진할 수 있다.
+4. 자동차 경주를 완료하면 누가 우승했는지를 알 수 있다. 우승자는 한명 이상일 수 있다.
+
+### 프로그래밍 요구사항
+1. 자바 코드 컨벤션을 지키면서 프로그래밍한다. 
+    - 기본적으로 Google Java Style Guide을 원칙으로 한다. 
+    - 단, 들여쓰기는 '2 spaces'가 아닌 '4 spaces'로 한다.
+2. indent(인덴트, 들여쓰기) depth를 3이 넘지 않도록 구현한다. 2까지만 허용한다. 
+   - 예를 들어 while문 안에 if문이 있으면 들여쓰기는 2이다.
+   - 힌트: indent(인덴트, 들여쓰기) depth를 줄이는 좋은 방법은 함수(또는 메소드)를 분리하면 된다.
+3. else 예약어를 쓰지 않는다.
+   - 힌트: if 조건절에서 값을 return하는 방식으로 구현하면 else를 사용하지 않아도 된다.
+- else를 쓰지 말라고 하니 switch/case로 구현하는 경우가 있는데 switch/case도 허용하지 않는다.
+4. 3항 연산자를 쓰지 않는다.
+5. 함수(또는 메소드)가 한 가지 일만 하도록 최대한 작게 만들어라.
+6. 모든 기능을 TDD로 구현해 단위 테스트가 존재해야 한다. 단, UI(System.out, System.in) 로직은 제외
+7. 핵심 로직을 구현하는 코드와 UI를 담당하는 로직을 구분한다.
+8. UI 로직을 InputView, ResultView와 같은 클래스를 추가해 분리한다.
+9. 모든 원시 값과 문자열을 포장한다.
+10. 일급 컬렉션을 쓴다.
